--- a/index.html
+++ b/index.html
@@ -27,18 +27,26 @@
     <ul id="list" class="list"></ul>
 
     <h3>Add Transaction</h3>
-    <form id="form">
-      <input type="text" id="text" placeholder="Enter text" required />
-      <input type="number" id="amount" placeholder="Amount (e.g. -20 or 100)" required />
-      <select id="category">
-        <option value="Food">Food</option>
-        <option value="Transport">Transport</option>
-        <option value="Bills">Bills</option>
-        <option value="Leisure">Leisure</option>
-        <option value="Others">Others</option>
-      </select>
-      <button type="submit">Add Transaction</button>
-    </form>
+<form id="form">
+  <input type="text" id="text" placeholder="Enter text" required />
+  
+  <input type="number" id="amount" placeholder="Amount" required />
+  
+  <select id="type">
+    <option value="income">Income</option>
+    <option value="expense">Expense</option>
+  </select>
+
+  <select id="category">
+    <option value="Food">Food</option>
+    <option value="Transport">Transport</option>
+    <option value="Bills">Bills</option>
+    <option value="Leisure">Leisure</option>
+    <option value="Others">Others</option>
+  </select>
+
+  <button type="submit">Add Transaction</button>
+</form>
 
     <button onclick="exportCSV()">Export CSV</button>
 
