--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 
     <h3>Add Transaction</h3>
 <form id="form">
-  <input type="text" id="text" placeholder="Enter text" required />
   
   <input type="number" id="amount" placeholder="Amount" required />
   
@@ -38,8 +37,12 @@
   </select>
 
   <select id="category">
-    <option value="Food">Food</option>
+    <option value="Grocery/Food">Grocery/Food</option>
+    <option value="car payment">car payment</option>
     <option value="Transport">Transport</option>
+    <option value="Credit card payment">Credit card payment</option>
+    <option value="Credit card interest">Credit card interest</option>
+    <option value="Education Loan">Education Loan</option>
     <option value="Bills">Bills</option>
     <option value="Leisure">Leisure</option>
     <option value="Others">Others</option>
