--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 </form>
 
     <button onclick="exportCSV()">Export CSV</button>
-
+    <label for="yearSelect">View Year:</label>
+    <select id="yearSelect"></select>
     <canvas id="expenseChart"></canvas>
   </div>
 
