--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
 </form>
 
     <button onclick="exportCSV()">Export CSV</button>
-    <label for="yearSelect">View Year:</label>
-    <select id="yearSelect"></select>
+    <div class="chart-controls" style="margin: 20px 0; text-align: center;">
+  <label for="yearSelect">View Year:</label>
+  <select id="yearSelect" style="padding: 5px; font-size: 1rem;"></select>
+</div>
     <canvas id="expenseChart"></canvas>
   </div>
 
