--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <input type="number" id="amount" placeholder="Amount" required />
   
   <select id="type">
+    <option value="Description">Description</option>
     <option value="income">Income</option>
     <option value="expense">Expense</option>
   </select>
