--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
 
     <h3>Add Transaction</h3>
 <form id="form">
-  
+  <input type="Text" id="Description" placeholder="Description" required />
   <input type="number" id="amount" placeholder="Amount" required />
   
   <select id="type">
-    <option value="Description">Description</option>
     <option value="income">Income</option>
     <option value="expense">Expense</option>
   </select>
